# pdf-extractor

./: .pre-commit-config.yaml  ADVANCED_OCR_OPTIONS.md  FLYER_EXTRACTION_STRATEGY.md  FLYER_SOURCES_ANALYSIS.md  GETTING_STARTED.md  IMAGE_TESTING_GUIDE.md  LICENSE  M2_SETUP_GUIDE.md  MODERN_OCR_2025.md  Makefile  QUICK_INSTALL_GUIDE.md  README.md  UV_QUICKSTART.md  VISION_API_TESTING.md  batch_test_images.py  compare_all_methods.py  download_sample_flyer.py  environment.yml  pyproject.toml  quick_local_test.sh  test_2025_ocr.py  test_advanced_ocr.py  test_local_ocr.py  test_ocr.py  test_vision_api.py
.github/: CLAUDE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: macos-compatibility.md  mkdocs.yml  models-2025.md
docs/docs/: index.md
notebooks/: convert_by_pdf2img.ipynb  convert_by_pymupdf.ipynb  img_2_txt_opencv.ipynb  test_claude_vision.ipynb
pdf2img/: __init__.py  dataset.py  features.py  plots.py
pdf2img/engines/: __init__.py  apple_vision.py  base.py  easyocr.py  got_ocr.py  minicpm.py  phi3.py  surya.py  tesseract.py
pdf2img/modeling/: predict.py  train.py
pdf2img/utils/: __init__.py  color_filter.py
scripts/: README.md  batch_test_images.py  compare_all_methods.py  download_sample_flyer.py  quick_local_test_uv.sh  test_2025_ocr.py  test_advanced_ocr.py  test_local_ocr.py  test_vision_api.py
tests/: __init__.py  conftest.py  test_base.py  test_engines.py
