[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf2img"
version = "0.0.1"
description = "extract images from pdf"
authors = [
  { name = "koqonut" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.10"

# Core dependencies
dependencies = [
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
# PDF processing
pdf = [
    "pymupdf>=1.23.0",
    "pdf2image>=1.16.0",
]

# OCR engines - Local
ocr-tesseract = [
    "pytesseract>=0.3.10",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
]

ocr-paddle = [
    "paddlepaddle>=2.5.0",
    "paddleocr>=2.7.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
]

ocr-easy = [
    "easyocr>=1.7.0",
    "pillow>=10.0.0",
]

ocr-apple = [
    "pyobjc-framework-Vision>=10.0",
    "pyobjc-framework-Quartz>=10.0",
    "pillow>=10.0.0",
]

# Vision API
vision-api = [
    "anthropic>=0.18.0",
]

# Data science tools
ml = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
]

# Development tools
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "ipykernel>=6.25.0",
    "pytest>=7.4.0",
]

# Documentation
docs = [
    "mkdocs>=1.5.0",
]

# All local OCR engines
ocr-all = [
    "pdf2img[ocr-tesseract,ocr-paddle,ocr-easy,ocr-apple]",
]

# Complete installation (everything except API)
local = [
    "pdf2img[pdf,ocr-all,ml,dev]",
]

# Full installation (everything including API)
all = [
    "pdf2img[local,vision-api]",
]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["pdf2img"]
force_sort_within_sections = true
